--- a/_output.yml
+++ b/_output.yml
@@ -5,11 +5,11 @@ bookdown::gitbook:
     toc:
       collapse: section
       before: |
-        <li><a href="./">R for Statistical Learning</a></li>
+        <li><a href="./">Statistical Learning with R</a></li>
       after: |
-        <li><a href="https://github.com/daviddalpiaz/r4sl" target="blank">&copy; 2017 David Dalpiaz</a></li>
+        <li><a href="https://github.com/teazrq/slwr" target="blank">&copy; 2018 Ruoqing Zhu</a></li>
     download: [pdf]
-    edit: https://github.com/daviddalpiaz/r4sl/edit/master/%s
+    edit: https://github.com/teazrq/slwr/edit/master/%s
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
