--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,6 +1,6 @@
 book_filename: "RESL"
 chapter_name: "Chapter "
-repo: https://github.com/teazrq/RESL
+repo: https://github.com/teazrq/SLWR
 output_dir: docs
 clean: [packages.bib, bookdown.bbl]
 new_session: yes
