--- a/_output.yml
+++ b/_output.yml
@@ -5,11 +5,11 @@ bookdown::gitbook:
     toc:
       collapse: section
       before: |
-        <li><a href="./">Statistical Learning with R</a></li>
+        <li><a href="./">Statistical Learning and Machine Learning with R</a></li>
       after: |
-        <li><a href="https://github.com/teazrq/SLWR" target="blank">&copy; 2018 Ruoqing Zhu</a></li>
+        <li><a href="https://github.com/teazrq/SMLR" target="blank">&copy; 2018 Ruoqing Zhu</a></li>
     download: [pdf]
-    edit: https://github.com/teazrq/SLWR/edit/master/%s
+    edit: https://github.com/teazrq/SMLR/edit/master/%s
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
