--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -5,7 +5,8 @@ output_dir: docs
 clean: [packages.bib, bookdown.bbl]
 new_session: yes
 rmd_files: ["index.Rmd",
-            "1.1-r-basics.Rmd",
+            "1.1-r-intro.Rmd",
+              "1.6-r-basics.Rmd",
               "1.2-rmd-basics.Rmd",
               "1.3-stat-prob-basics.Rmd",
               "1.4-modeling-basics.Rmd",
