--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
-Package: SLWR
+Package: SMLR
 Title: Statistical Learning with R
 Version: 0.1.0
 Authors@R: c(person("Ruoqing", "Zhu" , "rqzhu@illinois.edu", c("aut", "cre")))
-Depends: R (>= 3.3.0)
-URL: https://github.com/teazrq/SLWR
+Depends: R (>= 4.0.5)
+URL: https://github.com/teazrq/SMLR
 Imports: 
   caret,
   readr,
