--- a/_output.yml
+++ b/_output.yml
@@ -10,7 +10,7 @@ bookdown::gitbook:
         <li><a href="./">Statistical Learning and Machine Learning with R</a></li>
       after: |
         <li><a href="https://github.com/teazrq/SMLR" target="blank">&copy; 2021 Ruoqing Zhu</a></li>
-#    download: ["pdf", "epub"]
+    download: ["pdf", "epub"]
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
