--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -2,6 +2,7 @@ book_filename: "SMLR"
 repo: https://github.com/teazrq/SMLR
 clean: [packages.bib, bookdown.bbl]
 delete_merged_file: true
+output_dir: "docs"
 language:
   ui:
     chapter_name: "Chapter "
